# cxg-query-enhancer

./: .gitignore  Claude.md  README.md  code_review_analysis.md  performance_bottleneck_analysis.md  performance_test.py  pyproject.toml  run_cxg_query_enhancer.py  run_ontology_closure.py  test_query_performance.py
.github/workflows/: publish_to_pypi.yaml  publish_to_pypi_test.yaml  unit_tests.yaml
notebooks/: cxg_query_enhancer_examples.ipynb
notebooks/.ipynb_checkpoints/: cxg_query_enhancer_examples-checkpoint.ipynb
ontclosure_venv/: pyvenv.cfg
ontology_closure/: closure_testing.py  onto_closure.py  onto_closure_testing.py
ontology_closure/ontology_results/: CL_0000066_hierarchy.csv  CL_0002076_hierarchy.csv
ontology_results/: CL_0000066_hierarchy.csv
src/cxg_query_enhancer/: __init__.py  enhancer.py
src/ontology_closure/: __init__.py  onto_closure.py
src/ontology_closure_pipeline/: __init__.py
tests/: README.md  conftest.py  test_enhance.py  test_obs_close.py  test_ontology_extractor.py  test_process_category.py  test_sparql_client.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_error_handling.py  test_sparql_client.py
